# aidefend-discovery

./: .gitignore  AGENTS.md  Makefile  PRODUCT.md  README.md  requirements.txt
.ai/: COMMANDS.md  CONTEXT_INDEX.md  CURRENT.md  DECISIONS.md  FINDINGS_INDEX.md  HANDOFF.md  OPEN_LOOPS.md  SESSION_LOG.md  THREAT_MODEL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: discovery_promotion.md
.github/workflows/: discovery-nightly.yml
docs/aidefend_discovery/: DEMO_RUNBOOK.md  FUTURE_WORK.md  MAINTAINER_ALIGNMENT.md  MONOREPO.md  NOTES.md  PROMOTION_PLAYBOOK.md  QUALITY_AUDIT_CHECKLIST.md  REVIEW_CONTRACT.md  ROADMAP.md  TECHNICAL_OVERVIEW.md
docs/aidefend_discovery/discoveries/: 2026-05-02-nvd-ghsa-connector-api.md  2026-05-02-web-extraction-pipeline.md  INDEX.md
lab/aidefend_discovery/: README.md  feeds.allowlist  page_fetch.allowlist
lab/aidefend_discovery/bridges/: cwe_to_tactic.yaml
lab/aidefend_discovery/gold/: README.md  example_labels.jsonl  labeling_log.md
lab/aidefend_discovery/taxonomy_anchors/: cisco_aitech.yaml  databricks_dasf.yaml  maestro.yaml  mitre_atlas.yaml  nist_ai_100_2.yaml  owasp_agentic.yaml  owasp_llm.yaml  owasp_ml.yaml  saif.yaml
reports/: discovery_digest_20260505.md
reports/auto/20260506/: anchor_diff_20260506.json  metrics_20260506.json  review_20260506.csv
reports/auto/20260506/ghsa/: gap_run_20260506.json
reports/auto/20260506/nvd/: gap_run_20260506.json
reports/auto/20260507/: anchor_diff_20260507.json  metrics_20260507.json  review_20260507.csv
reports/auto/20260508/: anchor_diff_20260508.json  metrics_20260508.json  review_20260508.csv
reports/auto/20260509/: anchor_diff_20260509.json  metrics_20260509.json  review_20260509.csv
reports/auto/20260510/: anchor_diff_20260510.json  metrics_20260510.json  review_20260510.csv
reports/auto/20260511/: anchor_diff_20260511.json  metrics_20260511.json  review_20260511.csv
reports/auto/20260512/: anchor_diff_20260512.json  metrics_20260512.json  review_20260512.csv
review_console/: index.html  package-lock.json  package.json  vite.config.ts
review_console/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
scripts/: anchor_diff.py  audit_feeds.py  discovery_metrics.py  eval_discovery_gold.py  export_review.py  export_review_digest.py  run_demo.py  run_discovery_gap.py
scripts/aidefend_discovery/: __init__.py  baseline.py  bm25_index.py  bridge.py  entities.py  explain.py  extract.py  ghsa_ingest.py  nvd_ingest.py  review_console.py  rss_ingest.py  schemas.py  state_store.py
services/aidefend-mcp/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  INSTALL-繁體中文.md  INSTALL.md  LICENSE  README-繁體中文.md  README.md  SECURITY.md  __init__.py  __main__.py  docker-compose.yml  mcp_server.py  package-lock.json  package.json  parse_js_module.mjs  pyproject.toml  requirements-dev.txt  requirements.txt
services/aidefend-mcp/.github/: dependabot.yml
services/aidefend-mcp/.github/workflows/: ci.yml  security.yml
services/aidefend-mcp/app/: __init__.py  audit.py  auth.py  chunking.py  config.py  core.py  embedding_cache.py  exceptions.py  framework_utils.py  logger.py  main.py  schemas.py  security.py  sync.py  threat_keywords.py  utils.py
services/aidefend-mcp/app/discovery/: __init__.py  store.py
services/aidefend-mcp/app/tools/: __init__.py  chunked_search.py  classify_threat.py  code_snippets.py  compliance_mapping.py  comprehensive_search.py  coverage_analysis.py  defenses_for_threat.py  explain_candidate_mapping.py  implementation_plan.py  incident_response.py  list_anchor_diff.py  quick_reference.py  search_discovery_candidates.py  security_posture.py  statistics.py  technique_comparison.py  technique_detail.py  threat_coverage.py  validation.py
services/aidefend-mcp/docs/: ADVANCED_CONFIGURATION.md  CONFIGURATION.md  PERFORMANCE_OPTIMIZATION.md  TOOLS-繁體中文.md  TOOLS.md
services/aidefend-mcp/docs/advanced/: GPU_ACCELERATION.md
services/aidefend-mcp/scripts/: benchmark_search.py  create_lancedb_index.py  generate_api_key.py  install.py  uninstall_mcp.py
services/aidefend-mcp/tests/: README.md  __init__.py  test_3tier_classification.py  test_auth.py  test_auth_integration.py  test_chunked_search.py  test_classify_simple.py  test_code_snippets.py  test_compliance_mapping.py  test_comprehensive_search.py  test_coverage_analysis.py  test_database_recovery.py  test_defenses_for_threat.py  test_defenses_for_threat_fix.py  test_discovery_tools.py  test_implementation_plan.py  test_incident_response.py  test_parser.py  test_query_aidefend.py  test_quick_reference.py  test_schema_versioning.py  test_security_hardening.py  test_security_posture.py  test_statistics.py  test_status.py  test_sync_unified.py  test_technique_comparison.py  test_technique_detail.py  test_threat_coverage.py  test_validation.py
services/aidefend-mcp/tests/fixtures/: test_example.js
tests/: test_aidefend_discovery.py  test_anchor_diff.py  test_bridge.py  test_ghsa_connector.py  test_nvd_connector.py  test_review_console.py  test_review_digest.py  test_state_store.py
tests/fixtures/: minimal_aidefend_data.json  nvd_api_sample.json  sample_gap_run.json  sample_rss.xml
(+19 files in other folders)
